--- a/apps/section-06/src/02-component-patterns/styles/custom-styles.css
+++ b/apps/section-06/src/02-component-patterns/styles/custom-styles.css
@@ -11,3 +11,8 @@
   padding: 10px;
   width: calc(100% - 20px);
 }
+
+.custom-buttons button, .custom-buttons div {
+  color: white;
+  border-color: white;
+}
